# machinist

./: .gitignore  CMakeLists.txt  README.md
machinist/: CMakeLists.txt  Machinist.cpp
source/: CMakeLists.txt  Dir.cpp  Enumeration.cpp  File.cpp  Handle.cpp  Handle.h  Info.cpp  Machinist.cpp  Object.cpp  ParseUtils.cpp  ParseUtils.h  Pattern.cpp  Public.cpp  Recipe.cpp  Storable.cpp  Template.cpp
tests/: CMakeLists.txt  file.cpp  main.cpp
