file(GLOB_RECURSE MACHINIST_FILES "*.hpp" "*.cpp" "${CMAKE_INSTALL_PREFIX}/source/*.hpp" "${CMAKE_INSTALL_PREFIX}/source/*.cpp")
list(FILTER MACHINIST_FILES EXCLUDE REGEX ".*Storable.cpp$")
list(FILTER MACHINIST_FILES EXCLUDE REGEX ".*Pattern.cpp$")

add_executable(machinist ${MACHINIST_FILES})

install(TARGETS machinist
        RUNTIME DESTINATION bin
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        )